# id-photo-maker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  crop_widget.py  image_processor.py  main.py
src/resources/: __init__.py
src/ui/: __init__.py  main_window.ui  ui_main_window.py
