[project]
name = "id-photo-maker"
version = "0.1.0"
description = "智能证件照制作工具 - 基于 PySide6 + OpenCV"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "码上工坊", email = "code.workshop@example.com" }
]
urls = { "GitHub" = "https://github.com/ICodeWR/id-photo-maker" }

dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.9",
    "pillow>=10.2",
    "numpy>=1.26",
    "rembg>=2.0.57",
    "pymatting>=1.1.15",
    "onnxruntime>=1.24.3",
    "numba>=0.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pylint>=3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pylint]
max-line-length = 100

# ── uv 依赖安装源配置 ──────────────────────────────
# 优先使用清华大学 PyPI 镜像，加速依赖下载
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 官方 PyPI 作为备用（当清华源缺失包时自动回退）
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = false

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
